policy: Add support for device alert sliders.
* Provide support for alert slider hardware.
  Ability to swap order of alert slider within system setting.
  Enable setting config_hasAlertSlider to true and defining
  proc nodes for state path and UEvent match path.

 * Contributors:
 Sirhc95
 ZVNexus
 carlosavignano
 thecrazyskull

Change-Id: I762a3e6f5f31b50cd96130a71ad263d5b9f1161e
Signed-off-by: klozz <klozz@thexperienceproject.org>

--- a/core/res/res/values/xperience_symbols.xml
+++ b/core/res/res/values/xperience_symbols.xml
@@ -15,6 +15,11 @@
 -->
 <resources>
 
+    <!-- Alert Slider -->
+    <java-symbol type="string" name="alert_slider_state_path" />
+    <java-symbol type="string" name="alert_slider_uevent_match_path" />
+    <java-symbol type="bool" name="config_hasAlertSlider" />
+
     <!-- Power Menu Reboot -->
     <java-symbol name="reboot_to_bootloader_title" type="string" />
     <java-symbol name="reboot_to_bootloader_message" type="string" />
