--- a/core/res/res/values/xperience_config.xml
+++ b/core/res/res/values/xperience_config.xml
@@ -30,4 +30,7 @@
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
     </string-array>
 
+    <!-- Whether device has an alert slider. -->
+    <bool name="config_hasAlertSlider">false</bool>
+
 </resources>
