--- a/core/res/res/values/xperience_symbols.xml
+++ b/core/res/res/values/xperience_symbols.xml
@@ -45,5 +45,6 @@
 
     <!-- Pocket bridge -->
     <java-symbol type="string" name="config_pocketBridgeSysfsInpocket" />
+    <java-symbol type="bool" name="config_pocketModeSupported" />
 
 </resources>
