SystemUI: Introduce user interface for Alert Sliders.
Ported from OxygenOS and reworked for our alert slider
implementation. We target AudioManager instead of Zen,
icons are also the same as aosp and the dialog uses the
material theme as well as support for our themes.

To use, the alert slider config must be enabled. By default,
the dialog shows on the left side. To move it to the right
side, set the location config to 1.

Change-Id: I0522b849a8aeb3af0936eec4c0def894931cc564
Signed-off-by: klozz <klozz@thexperienceproject.org>
Signed-off-by: klozz <carlosj@klozz.dev>

--- a/core/res/res/values/xperience_symbols.xml
+++ b/core/res/res/values/xperience_symbols.xml
@@ -19,6 +19,7 @@
     <java-symbol type="string" name="alert_slider_state_path" />
     <java-symbol type="string" name="alert_slider_uevent_match_path" />
     <java-symbol type="bool" name="config_hasAlertSlider" />
+    <java-symbol type="integer" name="config_alertSliderLocation" />
 
     <!-- Power Menu Reboot -->
     <java-symbol name="reboot_to_bootloader_title" type="string" />
