--- a/core/res/res/values/xperience_config.xml
+++ b/core/res/res/values/xperience_config.xml
@@ -17,6 +17,14 @@
 -->
 <resources>
 
+    <!-- Whether device has an alert slider. -->
+    <bool name="config_hasAlertSlider">false</bool>
+
+    <!-- The location of the device's alert slider:
+         0: Left side
+         1: Right side -->
+    <integer name="config_alertSliderLocation">0</integer>
+
     <!-- The list of vendor package signatures that should also be considered
          platform signatures, specifically for use on devices with a vendor partition. -->
     <string-array name="config_vendorPlatformSignatures">
@@ -29,8 +37,5 @@
     <!-- Names of the key handler classes -->
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
     </string-array>
-
-    <!-- Whether device has an alert slider. -->
-    <bool name="config_hasAlertSlider">false</bool>
 
 </resources>
