SystemUI: Add VoLTE switch in tuner
Signed-off-by: klozz <klozz@thexperienceproject.org>
Change-Id: I052cfb0af2b0a3eb52da1605687cf63e93e91d29

--- a/packages/SystemUI/res/values/xperience_strings.xml
+++ b/packages/SystemUI/res/values/xperience_strings.xml
@@ -38,4 +38,7 @@
 
     <!-- USB tethering QS tile -->
     <string name="quick_settings_usb_tether_label">USB tethering</string>
+
+   <!-- Volte icon tuner -->
+   <string name="xpe_volte" translatable="false" >VoLTE</string>
 </resources>
